# relativistic_solver_hllc

./: .gitignore  ReadMe.md  hllc_settings.txt  makefile  pre_build.bat  settings_file.txt  solver_hllc_illum_cuda.sln  task
solver_hllc_illum_cuda/: CMakeLists.txt  File_Logs.txt  File_with_Logs.txt  Full_main.cpp  Illum_part.cpp  global_def.h  global_headers.h  global_value.h  hllc_1d.cpp  hllc_2d.cpp  kernel.cu  main.cpp  prj_config.h  rhllc_1d.cpp  rhllc_2d.cpp  solve_short_characteristic_cuda.cuh  solve_short_characteristics_calculations.cpp  solve_short_characteristics_calculations.h  solve_short_characteristics_global_structure.h  solve_short_characteristics_headers.h  solve_short_characteristics_hllc.cpp  solve_short_characteristics_hllc.h  solve_short_characteristics_logic_function.cpp  solve_short_characteristics_logic_function.h  solve_short_characteristics_main.cpp  solve_short_characteristics_main.h
solver_hllc_illum_cuda/build_graph/: build_graph_calculation.cpp  build_graph_calculation.h  build_graph_main.cpp  build_graph_prj_config.h  build_graph_read_write.cpp  build_graph_read_write.h  build_graph_structures.h
solver_hllc_illum_cuda/cuda/: cuda_def.cuh  cuda_kernel.cu  cuda_kernel.cuh  cuda_memory.cuh  cuda_solve.cu  cuda_solve.h  cuda_struct.cu  cuda_struct.cuh  cuda_utils.cu  cuda_utils.cuh
solver_hllc_illum_cuda/file_module/: reader_bin.cpp  reader_bin.h  reader_txt.cpp  reader_txt.h  reader_vtk.h  writer_bin.cpp  writer_bin.h  writer_vtk.h
solver_hllc_illum_cuda/make_illum_struct/: struct_short_characteristics_calculations.cpp  struct_short_characteristics_calculations.h  struct_short_characteristics_global_structure.h  struct_short_characteristics_logic_function.cpp  struct_short_characteristics_logic_function.h  struct_short_characteristics_main.cpp
solver_hllc_illum_cuda/solve_module/: Full_main.cpp  MPI_utils.cpp  MPI_utils.h  main_solve.cpp  solve_config.h  solve_global_struct.cpp  solve_global_struct.h  solve_main.cpp  solve_short_characteristics_calculations.cpp  solve_short_characteristics_global_structure.h  solve_short_characteristics_headers.h  solve_utils.cpp  solve_utils.h
solver_hllc_illum_cuda/solve_module/hllc/: Rhllc_3d_mpi.cpp  hllc_1d.cpp  hllc_2d.cpp  hllc_3d.cpp  hllc_utils.cpp  hllc_utils.h  solve_short_characteristics_hllc.cpp  solve_short_characteristics_hllc.h
solver_hllc_illum_cuda/solve_module/illum/: Illum_async.cpp  Illum_part.cpp  Illum_part_mpi.cpp  Illum_part_mpi_omp.cpp  illum_utils.cpp  illum_utils.h
solver_hllc_illum_cuda/solve_module/rhllc/: rhllc_1d.cpp  rhllc_2d.cpp  rhllc_2d_mpi.cpp  rhllc_3d.cpp  rhllc_3d_mpi.cpp  rhllc_utils.cpp  rhllc_utils.h
solver_hllc_illum_cuda/utils/: Header.h  ReBuildHLLC_time.cpp  RebuildFiles.cpp  SetDataToVtk.cpp  Utils_vtk.cpp  files_utils.cpp  files_utils.h  rebuild_grid.cpp  rebuild_grid.h  rebuild_solve.cpp  rebuild_solve.h  utils.cpp  utils_main.cpp
solver_hllc_illum_cuda/utils/grid_geometry/: build_rhllc_grid.cpp  build_rhllc_grid.h  geometry_data.cpp  geometry_data.h  geometry_solve.cpp  geometry_solve.h  get_grid_data.cpp  get_grid_data.h
